# Mirage

./: .gitignore  LICENSE  README.md  database_design.md
.github/workflows/: ci-validation-of-shell-scripts.yml  client.yml  codeql-rust.yml  codeql.yml  community_rs.yml  go.yml  rust.yml
client/: package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/components/Logo/: Btnfooter.css  Btnfooter.jsx  SpeedTestBtn.jsx  speedBtn.css
client/src/components/Navbar/: Navbar.jsx
client/src/sahil/: app.js  index.html  index.html2  style.css
community/: .gitignore  Cargo.toml  build.rs
community/proto/: chat.proto  movie.proto
community/protobuf/include/google/protobuf/: type.proto:Zone.Identifier
community/src/: main.rs  movie.rs
dnsserver/: Cargo.toml
speed test/: go.mod  go.sum  main.go
speedTest/: go.mod  go.sum  main.go  speed_test.go
