[package]
name = "mirage-community"
version = "0.1.0"
authors = ["Pushkar Mishra <pushkarmishra029@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
prost = "0.11"
prost-types = "0.11"
tonic-web = "0.9.2"
tonic-health = "0.9.2"
tower-http = "0.2.3"
futures-channel = "0.3.30"
futures = "0.3.30"
chrono = "0.4.34"

[build-dependencies]
prost-build = "0.7.0"
tonic-build = "0.8"
protobuf-src = "1.1.0"
